<?xml version="1.0"?>
<package>
  <name>ntrip</name>
  <version>0.0.0</version>

  <description>
    Ntrip Client
  </description>

  <maintainer email="support@movella.com">Bryan He</maintainer>

  <license>BSD</license>

  <author email="support@movella.com">Bryan He</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>mavros_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>mavros_msgs</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosbag</test_depend>

  <export>
  </export>
</package>
